--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   --secondary-text-color: #577592;
   --accent-color: #2294ed;
   --accent-color-dark: #1d69a3;
-  --padding-inline-section: 10px;
+  --padding-inline-section: 20px;
 }
 
 body {
@@ -181,3 +181,48 @@ header {
 .logo {
     height: 46px;
 }
+
+/* feature section */
+
+.features-section {
+    padding: 80px var(--padding-inline-section) 0;
+    background-image: url(images/asset\ 34.svg);
+    background-repeat: no-repeat;
+    /* background-position: 50% 50%;
+    background-size: auto 100%; */
+    background-position: center;
+    text-align: center;
+}
+
+.features-header {
+    text-align: center;
+}
+
+.features-heading-text {
+    margin-bottom: 20px;
+}
+
+.features-area {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 30px;
+    gap: 40px;
+}
+
+.features-card {
+    text-align: center;
+    max-width: 30%;
+    min-width: 30%;
+    /* margin-block: 20px; */
+    flex-direction: column;
+    gap: 20px;
+}
+
+.features-card-logo {
+    height: 40px;
+}
+
+.features-logo {
+    height: 40px;
+}
+
