--- a/style.css
+++ b/style.css
@@ -194,13 +194,12 @@ header {
     text-align: center;
 }
 
-.features-header {
+.features-header, .examples-header {
     text-align: center;
+    flex-direction: column;
+    gap: 20px;
 }
 
-.features-heading-text {
-    margin-bottom: 20px;
-}
 
 .features-area {
     flex-wrap: wrap;
@@ -226,3 +225,118 @@ header {
     height: 40px;
 }
 
+/* big feature section */
+
+.big-feature-section {
+    padding: 30px var(--padding-inline-section) 0;
+}
+
+.big-feature-container {
+    gap: 30px;
+}
+
+.feature-img img {
+    width: 100%;
+}
+
+.feature-desc {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+}
+
+/* examples section */
+.examples-area {
+    justify-content: space-between;
+    margin-block: 30px;
+}
+
+.examples-card{
+    width: 23%;
+    position: relative;
+    min-height: 300px;
+    background: black;
+    transition: 0.2s ease-out;
+}
+
+.examples-card:nth-child(1) {
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(images/asset\ 36.jpeg);
+    background-size: cover;
+}
+
+.examples-card:nth-child(2) {
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(images/asset\ 37.jpeg);
+    background-size: cover;
+}
+
+.examples-card:nth-child(3) {
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(images/asset\ 38.jpeg);
+    background-size: cover;
+}
+
+.examples-card:nth-child(4) {
+    background: linear-gradient(rgb(0,0,0,0.1), rgb(0,0,0,0.8)), url(images/asset\ 39.jpeg);
+    background-size: cover;
+}
+
+.card-text {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    color: white;
+}
+
+.examples-card:hover {
+    box-shadow: 0 0 10px rgb(65, 65, 65);
+}
+
+/* cta section */
+.cta-section {
+    background-color: var(--primary-text-color);
+    padding: 100px var(--padding-inline-section) 60px;
+}
+
+.cta-section-container {
+    flex-direction: column;
+    color: white;
+    gap: 30px;
+}
+
+.cta-section-container p {
+    color: white;
+    margin-top: 20px;
+}
+
+/* footer section */
+footer {
+    background-color: #ebf2fa;
+    padding-block: 80px;
+}
+
+.footer-container {
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.link-column {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.link-column a {
+    color: var(--secondary-text-color);
+}
+
+/* sub footer */
+
+.subfooter {
+    background-color: #b9cde4;
+    padding: 0 var(--padding-inline-section) 0;
+}
+
+.subfooter-container {
+    justify-content: center;
+    gap: 30px;
+}
